added bullited list

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 
 </head>
 <body>
- <h1>Its Isaac Davis for everyone</h1>
+ <header> 
+  <h1>Its Isaac Davis for everyone</h1>
+  <bl>
+   <li>pageOne </li>
+   <li>pageTwo </li>
+   <li>pageThree </li>
+  </bl>
+ 
+ </header>
 </body>
 
