--- a/music.html
+++ b/music.html
@@ -7,9 +7,9 @@
  <header> 
   <h1>Its Isaac Davis for everyone</h1>
   <bl>
-   <li><a href="motorcyle.html">Morotcycle</a></li>
-   <li><a href="scuba.html">Scuba</a></li>
-   <li><a href="music.html">Music</a></li>
+   <li>pageOne </li>
+   <li>pageTwo </li>
+   <li>pageThree </li>
   </bl>
  
  </header>
