--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
  <header> 
   <h1>Its Isaac Davis for everyone</h1>
   <bl>
-   <li><a href="motorcyle.html">Morotcycle</a></li>
-   <li><a href="scuba.html">Scuba</a></li>
+   <li><a href="motorcycle.html">Morotcycle</a></li>
+   <li><a href="scubaDyving.html">Scuba</a></li>
    <li><a href="music.html">Music</a></li>
   </bl>
  
