renamed files and fixed related links

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 </head>
 <body>
  <header> 
-  <h1>Its Isaac Davis for everyone</h1>
+  <h1>Its Isaac Davis for everyone to see</h1>
   <bl>
    <li><a href="motorcycle.html">Morotcycle</a></li>
-   <li><a href="scubaDiving.html">Scuba</a></li>
-   <li><a href="music.html">Music</a></li>
+   <li><a href="classes.html">Scuba</a></li>
+   <li><a href="links.html">Music</a></li>
   </bl>
  
  </header>
