--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <h1>Its Isaac Davis for everyone to see</h1>
   <bl>
    <li><a href="motorcycle.html">Morotcycle</a></li>
-   <li><a href="classes.html">Scuba</a></li>
-   <li><a href="links.html">Music</a></li>
+   <li><a href="classes.html">Classes</a></li>
+   <li><a href="links.html">Links</a></li>
   </bl>
  
  </header>
