fixes #1 and add pic

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 <body>
  <header> 
   <h1>Its Isaac Davis for everyone to see</h1>
+  <p>And Walker!</p>
+  <img src="wakerandIsaac.jpg">
   <bl>
-   <li><a href="motorcycle.html">Morotcycle</a></li>
+   <li><a href="motorcycle.html">Motorcycle</a></li>
    <li><a href="classes.html">Classes</a></li>
    <li><a href="links.html">Links</a></li>
   </bl>
