--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <header> 
   <h1>Its Isaac Davis for everyone to see</h1>
   <p>And Walker!</p>
-  <img src="wakerandIsaac.jpg">
+  <img src="walkerandIsaac.jpg">
   <bl>
    <li><a href="motorcycle.html">Motorcycle</a></li>
    <li><a href="classes.html">Classes</a></li>
