added class table

--- a/classes.html
+++ b/classes.html
@@ -5,13 +5,39 @@
 </head>
 <body>
  <header> 
-  <h1>Its Isaac Davis for everyone</h1>
-  <bl>
-   <li>pageOne </li>
-   <li>pageTwo </li>
-   <li>pageThree </li>
-  </bl>
- 
+  <h1>These are the classes I am in</h1>
+  <div>
+  <table boarder="1">
+   <tr>
+    <th>Department</th>
+    <th>Number</th>
+    <th>Name</th>
+   </tr>
+   <tr>
+    <th>CS</th>
+    <th>441</th>
+    <th>Operating Systems</th>
+   </tr>
+    <th>CS</th>
+    <th>365</th>
+    <th>Internet Programming</th>
+   <tr>
+    <th>CS</th>
+    <th>200</th>
+    
+   </tr>
+   <tr>
+    <th>Africana Studies</th>
+    <th>245</th>
+    <th>History of Jazz</th>
+   </tr>
+   <tr>
+    <th>Paideia</th>
+    <th>450</th>
+    <th>Considering Animals</th>
+   </tr>
+  </table>
+  </div> 
  </header>
 </body>
 
