--- a/links.html
+++ b/links.html
@@ -4,14 +4,6 @@
 
 </head>
 <body>
- <header> 
-  <h1>Its Isaac Davis for everyone</h1>
-  <bl>
-   <li>pageOne </li>
-   <li>pageTwo </li>
-   <li>pageThree </li>
-  </bl>
- 
- </header>
+<a href="news.ycombinator.com">Hacker News</a>
 </body>
 
