--- a/motorcycle.html
+++ b/motorcycle.html
@@ -6,12 +6,16 @@
 <body>
  <header> 
   <h1>These are two motorcycles I have owned</h1>
-  <h3>My first bike</h3>
-   <p>This is a 1993 Suzuki Katana. The second gear didn't work but other than that it didn't die too often. I got it on a trade for a motorcycle that did not run at all so I would call that a win.</p>
-   <img src="pics/katana.jpg">
-  <h3>My second bike</h3>
-   <p>This one is a 2005 Yamaha FZR600. I still have it and look forward to ridding when the weather turns better.</p>
+  <div>
+   <h3>My first bike</h3>
+    <p>This is a 1993 Suzuki Katana. The second gear didn't work but other than that it didn't die too often. I got it on a trade for a motorcycle that did not run at all so I would call that a win.</p>
+    <img src="pics/katana.jpg">
+   </div>
+   <div>
+    <h3>My second bike</h3>
+    <p>This one is a 2005 Yamaha FZR600. I still have it and look forward to ridding when the weather turns better.</p>
     <img src="pics/yamaha.jpg">  
+   </div>
  </header>
 </body>
 
