added titles and links

--- a/links.html
+++ b/links.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+ <title>Links</title>
 </head>
 <body>
-<a href="news.ycombinator.com">Hacker News</a>
+ <h3>Some links that I like</h3> 
+ <a href="newegg.com">NewEgg</a>
+ <a href="news.ycombinator.com">Hacker News</a>
+ <a href="index.html">Homepage</a>
 </body>
 
