change url to work

--- a/links.html
+++ b/links.html
@@ -5,8 +5,8 @@
 </head>
 <body>
  <h3>Some links that I like</h3> 
- <a href="newegg.com">NewEgg</a>
- <a href="news.ycombinator.com">Hacker News</a>
+ <a href="http://newegg.com">NewEgg</a>
+ <a href="http://news.ycombinator.com">Hacker News</a>
  <a href="index.html">Homepage</a>
 </body>
 
