index layout changes

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <h1>Its Isaac Davis for everyone to see</h1>
   <p>And Walker!</p>
   <img src="pics/walkerandIsaac.jpg">
+ </header>
   <bl>
    <li><a href="motorcycle.html">Motorcycle</a></li>
    <li><a href="classes.html">Classes</a></li>
    <li><a href="links.html">Links</a></li>
   </bl>
- 
- </header>
- </footer>
+ <footer>
   <p>isaac@luther.edu isaac_ham_davis@twitter</p>
+ </footer>
 </body>
 
