--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+ <link rel="stylesheet" type="text/css" href="theme.css">
  <title>IsaacDavis</title>
 </head>
 <body>
- <header> 
+<div class="container"> 
+ <header id="homeHead"> 
   <h1>Its Isaac Davis for everyone to see</h1>
-  <p>And Walker!</p>
-  <img src="pics/walkerandIsaac.jpg">
  </header>
+<div id="content">
+ <div id="nav">
   <bl>
+   <h4>Navigation</h4>
    <li><a href="motorcycle.html">Motorcycle</a></li>
    <li><a href="classes.html">Classes</a></li>
    <li><a href="links.html">Links</a></li>
   </bl>
- <footer>
+ </div>
+ <div id="homepic">
+  <p>And Walker!</p>
+  <img src="pics/walkerandIsaac.jpg" >
+ </div>
+</div>
+ <footer id="homeFoot">
   <p>isaac@luther.edu isaac_ham_davis@twitter</p>
  </footer>
+</div>
 </body>
 
