formatted with bootstrap

--- a/index.html
+++ b/index.html
@@ -2,20 +2,31 @@
 <html lang="en">
 <head>
  <title>IsaacDavis</title>
+ <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
+ <link rel="stylesheet" href="theme.css" type="text/css" charset="utf-8">
 </head>
 <body>
- <header> 
+ <header class="col-md-12 col-xs-12"> 
   <h1>Its Isaac Davis for everyone to see</h1>
-  <p>And Walker!</p>
-  <img src="pics/walkerandIsaac.jpg">
+  <p>(Still under production)</p>
  </header>
-  <bl>
-   <li><a href="motorcycle.html">Motorcycle</a></li>
-   <li><a href="classes.html">Classes</a></li>
-   <li><a href="links.html">Links</a></li>
-  </bl>
- <footer>
+ <div class="content col-md-4">
+  <div class="nav col-md-4">
+   <bl>
+    <li><a href="motorcycle.html">Motorcycle</a></li>
+    <li><a href="classes.html">Classes</a></li>
+    <li><a href="links.html">Links</a></li>
+   </bl>  
+  </div>
+  <div class="text col-md-8 col-xs-12">
+   <p>And Walker!</p>
+   <img src="pics/walkerandIsaac.jpg">
+  </div>
+ </div>
+ <footer class="foot col-md-12 col-xs-12">
   <p>isaac@luther.edu isaac_ham_davis@twitter</p>
  </footer>
+ <script src="https://code.jquery.com/jquery.js"></script>
+ <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 </body>
-
+</html>
