--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <li><a href="motorcycle.html">Motorcycle</a></li>
     <li><a href="classes.html">Classes</a></li>
     <li><a href="links.html">Links</a></li>
+    <li><a href="primeFactor/input.html">Prime Factoring</a></li>
    </bl>  
   </div>
   <div class="text col-md-8 col-xs-12">
