basic wl layout and queue impl

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <li><a href="classes.html">Classes</a></li>
     <li><a href="links.html">Links</a></li>
     <li><a href="primeFactor/input.html">Prime Factoring</a></li>
+    <li><a href="wordLadder/ladder.html">Word Ladder</a></li>
    </bl>  
   </div>
   <div class="text col-md-8 col-xs-12">
