finished basic impl.

--- a/wordLadder/ladder.html
+++ b/wordLadder/ladder.html
@@ -24,5 +24,6 @@
 
 		</span>
 		<script type="text/javascript" src="makeLadder.js"></script>
+		<script type="text/javascript" src="wordList.js"></script>
 	</body>
 </html>
