added random functionallity to prime wfactorization

--- a/primeFactor/input.html
+++ b/primeFactor/input.html
@@ -11,7 +11,8 @@
   <span id="input" class="col-md-12">
    <p>Put your number in the box below. Do not include anything other than an integer as digits.</p>
    <textarea rows="4" cols="50" id="inputNumber"></textarea>
-   <button onclick="mainControll()">Find the primes</button>
+   <button onclick="userInput()">Find the primes</button>
+   <button onclick="getRandom()">Get a random 10</button>
   </span>
   <span id="output" class="col-md-12">
    <span id="outTable" class="col-xs-12 col-md-6">
