added link to xkcd password gen

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <li><a href="primeFactor/input.html">Prime Factoring</a></li>
     <li><a href="wordLadder/ladder.html">Word Ladder</a></li>
     <li><a href="cgi-bin/todo.py">ToDo</a></li>
+    <li><a href="http://obscure-headland-4539.herokuapp.com/xkcd">XKCD Password</a></li>
    </bl>  
   </div>
   <div class="text col-md-8 col-xs-12">
